[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/gfx/ui_elements/icons/ui_icons.png" type="Texture" id=1]
[ext_resource path="res://assets/ui_styles/outer_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://src/gui/menus/settlement_screen/trade_screen.gd" type="Script" id=3]
[ext_resource path="res://src/gui/menus/main/inventory/GridSlot.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gfx/ui_elements/icons/icon_trade.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/ui_elements/icons/mouse_button_icon.png" type="Texture" id=6]
[ext_resource path="res://src/gui/menus/facility/manage/ResourceSlider.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/gfx/ui_elements/icons/middle_mouse_icon.png" type="Texture" id=9]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
repeat = 1

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 32, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 64, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="TradeScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 584.0
custom_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 40.0
margin_right = 992.0
margin_bottom = 568.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 508.0
size_flags_vertical = 3

[node name="PlayerArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 416.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="PlayerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea"]
margin_right = 153.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 0
text = "Add/Remove All"

[node name="ScrollInventory" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea"]
margin_top = 46.0
margin_right = 416.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="InventoryGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory"]
margin_right = 416.0
margin_bottom = 248.0
columns = 5

[node name="GridSlot0" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot1" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot2" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot3" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_right = 332.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot4" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_right = 416.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot5" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot6" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 84.0
margin_right = 164.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot7" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 84.0
margin_right = 248.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot8" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 84.0
margin_right = 332.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot9" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 84.0
margin_right = 416.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot10" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot11" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 168.0
margin_right = 164.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot12" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 168.0
margin_right = 248.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot13" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 168.0
margin_right = 332.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot14" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/ScrollInventory/InventoryGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_top = 168.0
margin_right = 416.0
margin_bottom = 248.0
is_for_trade = true

[node name="TradeArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 420.0
margin_right = 588.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="TradeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea"]
margin_left = 24.0
margin_right = 144.0
margin_bottom = 42.0
rect_min_size = Vector2( 120, 42 )
size_flags_horizontal = 4
disabled = true
text = "Trade"
icon = ExtResource( 5 )
flat = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea"]
margin_left = 24.0
margin_top = 46.0
margin_right = 144.0
margin_bottom = 508.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 454.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="PlayerOffer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 446.0

[node name="PlayerBar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer/PlayerOffer"]
margin_left = 7.0
margin_right = 37.0
margin_bottom = 430.0
rect_min_size = Vector2( 30, 300 )
size_flags_horizontal = 4
size_flags_vertical = 3
value = 12.0
texture_progress = SubResource( 5 )
fill_mode = 3
tint_progress = Color( 0.870588, 0.623529, 0.392157, 1 )
nine_patch_stretch = true

[node name="PlayerOfferLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer/PlayerOffer"]
margin_top = 434.0
margin_right = 44.0
margin_bottom = 446.0
rect_min_size = Vector2( 44, 0 )
text = "12"
align = 1

[node name="SettlementOffer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 104.0
margin_bottom = 446.0

[node name="SettlementBar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer/SettlementOffer"]
margin_left = 7.0
margin_right = 37.0
margin_bottom = 430.0
rect_min_size = Vector2( 30, 300 )
size_flags_horizontal = 4
size_flags_vertical = 3
value = 12.0
texture_progress = SubResource( 5 )
fill_mode = 3
tint_progress = Color( 0.411765, 0.611765, 0.403922, 1 )
nine_patch_stretch = true

[node name="SettlementOfferLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/PanelContainer/HBoxContainer/SettlementOffer"]
margin_top = 434.0
margin_right = 44.0
margin_bottom = 446.0
rect_min_size = Vector2( 44, 0 )
text = "12"
align = 1

[node name="SettlementArea" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 592.0
margin_right = 992.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="SettlementButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea"]
margin_left = 247.0
margin_right = 400.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 42 )
size_flags_horizontal = 8
text = "Add/Remove All"

[node name="ScrollSettlement" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SettlementGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement"]
margin_right = 400.0
margin_bottom = 248.0
custom_constants/hseparation = 0
columns = 5

[node name="GridSlot0" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 80.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot1" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 160.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot2" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_right = 240.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot3" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 320.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot4" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_right = 400.0
margin_bottom = 80.0
is_for_trade = true

[node name="GridSlot5" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot6" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 84.0
margin_right = 160.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot7" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 84.0
margin_right = 240.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot8" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 84.0
margin_right = 320.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot9" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 84.0
margin_right = 400.0
margin_bottom = 164.0
is_for_trade = true

[node name="GridSlot10" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 80.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot11" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 168.0
margin_right = 160.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot12" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 168.0
margin_right = 240.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot13" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 168.0
margin_right = 320.0
margin_bottom = 248.0
is_for_trade = true

[node name="GridSlot14" parent="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/ScrollSettlement/SettlementGrid" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 168.0
margin_right = 400.0
margin_bottom = 248.0
is_for_trade = true

[node name="Footnotes" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 512.0
margin_right = 992.0
margin_bottom = 528.0
custom_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Footnotes"]
margin_right = 53.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer"]
margin_left = 20.0
margin_top = 2.0
margin_right = 53.0
margin_bottom = 14.0
text = "Add"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Footnotes"]
margin_left = 85.0
margin_right = 184.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )
flip_h = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer2"]
margin_left = 20.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 14.0
text = "Quantity"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Footnotes"]
margin_left = 216.0
margin_right = 305.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer3"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 6 )
flip_h = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Footnotes/HBoxContainer3"]
margin_left = 20.0
margin_top = 2.0
margin_right = 89.0
margin_bottom = 14.0
text = "Remove"

[node name="ResourceSlider" parent="MarginContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 378.0
margin_top = 201.0
margin_right = 613.0
margin_bottom = 407.0
rect_min_size = Vector2( 235, 206 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ExitBtn" type="Button" parent="."]
margin_left = 984.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 40.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayerArea/PlayerButton" to="." method="_on_PlayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TradeArea/TradeButton" to="." method="_on_TradeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SettlementArea/SettlementButton" to="." method="_on_SettlementButton_pressed"]
[connection signal="value_chosen" from="MarginContainer/ResourceSlider" to="." method="_on_ResourceSlider_value_chosen"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
